crates/monochange_lint/src/snapshots/monochange_lint__snapshots__npm_lints__no_duplicate_deps_diff.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: "format_file_diff(content, fixed_content)"
---
=== ORIGINAL ===
{
  "name": "test",
  "version": "1.0.0",
  "dependencies": {
    "shared-dep": "^1.0.0"
  },
  "devDependencies": {
    "shared-dep": "^1.0.0"
  }
}
=== FIXED ===
"name": "test",
  "private": trueRemove 'shared-dep' from non-dev dependency sectionsMove 'dependencies' to 'devDependencies' section{
  "name": "test",
  "version": "1.0.0",
  "dependencies": {
    "shared-dep": "^1.0.0"
  },
  "devDependencies": {
    "shared-dep": "^1.0.0"
  }
}
=== END ===
