crates/monochange_lint/src/snapshots/monochange_lint__snapshots__npm_lints__npm_sorted_dependencies_diff.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: "format_file_diff(content, fixed_content)"
---
=== ORIGINAL ===
{
  "name": "test",
  "version": "1.0.0",
  "dependencies": {
    "zzzz": "^1.0.0",
    "aaaa": "^1.0.0",
    "mmmm": "^1.0.0"
  }
}
=== FIXED ===
"name": "test",
  "private": trueMove 'dependencies' to 'devDependencies' section{
  "name": "test",
  "version": "1.0.0",
  "dependencies": {
    "zzzz": "^1.0.0",
    "aaaa": "^1.0.0",
    "mmmm": "^1.0.0"
  }
}
=== END ===
