crates/monochange_lint/src/snapshots/monochange_lint__snapshots__npm_lints__npm_unlisted_package_private_diff.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: "format_file_diff(content, fixed_content)"
---
=== ORIGINAL ===
{
  "name": "unlisted-pkg",
  "version": "1.0.0"
}
=== FIXED ===
"name": "unlisted-pkg",
  "private": true{
  "name": "unlisted-pkg",
  "version": "1.0.0"
}
=== END ===
