crates/monochange_lint/src/snapshots/monochange_lint__snapshots__npm_lints__npm_unlisted_package_private_report.snap
---
source: crates/monochange_lint/src/snapshots.rs
assertion_line: 500
expression: format_report(&report)
---
Errors: 4, Warnings: 0

[error] npm/required-package-fields: Missing required package.json field: 'description'
[error] npm/required-package-fields: Missing required package.json field: 'repository'
[error] npm/required-package-fields: Missing required package.json field: 'license'
[error] npm/unlisted-package-private: Package 'unlisted-pkg' is not defined in monochange.toml and must be marked as private. Either add it to monochange.toml or set "private": true in package.json [FIXABLE: Add `private: true` to package.json]
