crates/monochange_lint/src/snapshots/monochange_lint__snapshots__npm_lints__root_no_prod_deps_diff.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: "format_file_diff(content, fixed_content)"
---
=== ORIGINAL ===
{
  "name": "root",
  "version": "1.0.0",
  "dependencies": {
    "some-dep": "^1.0.0"
  }
}
=== FIXED ===
"name": "root",
  "private": trueMove 'dependencies' to 'devDependencies' section{
  "name": "root",
  "version": "1.0.0",
  "dependencies": {
    "some-dep": "^1.0.0"
  }
}
=== END ===
