crates/monochange_lint/src/snapshots/monochange_lint__snapshots__npm_lints__root_no_prod_deps_report.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: format_report(&report)
---
Errors: 4, Warnings: 1

[error] npm/required-package-fields: Missing required package.json field: 'description'
[error] npm/required-package-fields: Missing required package.json field: 'repository'
[error] npm/required-package-fields: Missing required package.json field: 'license'
[warning] npm/root-no-prod-deps: Root package.json should not have production dependencies. Use devDependencies instead. [FIXABLE: Move dependencies to devDependencies]
[error] npm/unlisted-package-private: Package 'root' is not defined in monochange.toml and must be marked as private. Either add it to monochange.toml or set "private": true in package.json [FIXABLE: Add `private: true` to package.json]
