crates/monochange_lint/src/snapshots/monochange_lint__snapshots__npm_lints__workspace_protocol_diff.snap
---
source: crates/monochange_lint/src/snapshots.rs
expression: "format_file_diff(content, fixed_content)"
---
=== ORIGINAL ===
{
  "name": "test",
  "version": "1.0.0",
  "dependencies": {
    "internal-pkg": "^1.0.0"
  }
}
=== FIXED ===
"name": "test",
  "private": trueMove 'dependencies' to 'devDependencies' section"internal-pkg": "workspace:*"{
  "name": "test",
  "version": "1.0.0",
  "dependencies": {
    "internal-pkg": "^1.0.0"
  }
}
=== END ===
